<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".progress.ProgressActivity">
    <ProgressBar
        android:id="@+id/ProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.20"
        android:progress="0"
        android:progressTint="@color/colorAccent"
        android:scaleY="1.8"
        tools:ignore="UnusedAttribute" />
    <CheckBox
        android:id="@+id/checkBoxScanning"
        app:layout_constraintTop_toBottomOf="@id/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:clickable="false"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_50sdp"
        android:button="@drawable/checkbox_toggle"
        android:text="@string/scanning_for_tv"
        android:textColor="@color/colorWhite"/>
    <CheckBox
        android:id="@+id/checkBoxDetecting"
        app:layout_constraintTop_toBottomOf="@id/checkBoxScanning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15ssp"
        android:clickable="false"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_50sdp"
        android:button="@drawable/checkbox_toggle"
        android:text="@string/detecting_model"
        android:textColor="@color/colorWhite"/>
    <CheckBox
        android:id="@+id/checkBoxInstalling"
        app:layout_constraintTop_toBottomOf="@id/checkBoxDetecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15ssp"
        android:clickable="false"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_50sdp"
        android:button="@drawable/checkbox_toggle"
        android:text="@string/installing_drivers"
        android:textColor="@color/colorWhite"/>
    <CheckBox
        android:id="@+id/checkBoxConnecting"
        app:layout_constraintTop_toBottomOf="@id/checkBoxInstalling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15ssp"
        android:clickable="false"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_50sdp"
        android:button="@drawable/checkbox_toggle"
        android:text="@string/connecting"
        android:textColor="@color/colorWhite"/>
    <Button
        android:id="@+id/okButton"
        style="@style/MyButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxConnecting"
        android:background="@drawable/general_button_background"
        android:text="@string/ok"
        android:visibility="gone"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>