<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash.SplashActivity">
    <ImageView
        android:id="@+id/splashLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.35"
        android:src="@drawable/ic_launcher"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"/>
    <TextView
        android:id="@+id/appNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/splashLogo"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/app_name"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/subTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView"
        android:text="@string/sub_title"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/splashLetsStartButton"
        style="@style/MyButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_70sdp"
        android:text="@string/lets_start"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>