<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".preparation.PreparationActivity">
    <TextView
        android:id="@+id/stepTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/step"
        android:textSize="@dimen/_18ssp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/preparationStepGuideParent"
        app:layout_constraintTop_toBottomOf="@+id/stepTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/preparationStepOneParent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingEnd="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/preparationStepOneLeftLayoutParent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/preparationStepOneNumberTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="1"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/step_bg"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"/>
                <View
                    app:layout_constraintTop_toBottomOf="@+id/preparationStepOneNumberTextView"
                    android:background="@drawable/vertical_white_line"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="@dimen/_3sdp"
                    android:layout_height="0dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                app:layout_constraintStart_toEndOf="@id/preparationStepOneLeftLayoutParent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/tv_and_mobile_same_wifi"
                android:textSize="@dimen/_15ssp"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/preparationStepTwoParent"
            app:layout_constraintTop_toBottomOf="@+id/preparationStepOneParent"
            android:paddingEnd="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/preparationStepTwoLeftLayoutParent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/preparationStepTwoNumberTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="2"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/step_bg"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"/>
                <View
                    app:layout_constraintTop_toBottomOf="@+id/preparationStepTwoNumberTextView"
                    android:background="@drawable/vertical_white_line"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="@dimen/_3sdp"
                    android:layout_height="0dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                app:layout_constraintStart_toEndOf="@id/preparationStepTwoLeftLayoutParent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/miracast_display_enabled"
                android:textSize="@dimen/_15ssp"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@+id/preparationStepTwoParent"
            android:paddingEnd="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/preparationStepThreeLeftLayoutParent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="match_parent">
                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="3"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/step_bg"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                app:layout_constraintStart_toEndOf="@id/preparationStepThreeLeftLayoutParent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/click_start_and_wifi_display"
                android:textSize="@dimen/_15ssp"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/preparationStartButton"
        app:layout_constraintTop_toBottomOf="@+id/preparationStepGuideParent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/start"
        android:textSize="@dimen/_18ssp"
        android:textAllCaps="false"
        android:background="@drawable/general_button_background"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"/>
    <Button
        android:id="@+id/preparationGuideButton"
        app:layout_constraintTop_toBottomOf="@+id/preparationStartButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/guide"
        android:textSize="@dimen/_18ssp"
        android:textAllCaps="false"
        android:background="@drawable/general_button_background"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>